examples/bad/runtime2.swifty
//array index out of range
var arr = {1,2,3}

print arr[10]
